--- a/src/search.less
+++ b/src/search.less
@@ -1,4 +1,12 @@
+@font-face {
+    font-family: 'SourceHanSerifSC-Heavy';
+    src:url('./images/SourceHanSerifSC-Heavy.otf') format(truetype)
+}
+
+
 .search-text{
   font-size: 24px;
   color: red;
+  font-family: 'SourceHanSerifSC-Heavy';
 }
+
